Added multi-channel recording
